--- a/front/styles/main/theme/_dark.scss
+++ b/front/styles/main/theme/_dark.scss
@@ -131,6 +131,10 @@ body.dark-theme {
 				border-color: $dark-discussion-editor-border-color;
 				color: $dark-discussion-content-color;
 			}
+
+			.editor-label {
+				background-color: $dark-discussion-editor-background-color;
+			}
 		}
 
 		.editor-wrapper {
